--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -295,7 +295,7 @@
     <span class="like-count">💙 {{post2.likes_count }}</span>
 </div>
 
-                        {% if post2.user_name == current_user %}
+                        {% if post2.user_name == current_user or user.is_superuser %}
                         <div class="post-actions">
                             <form action="{% url 'edit_post' post2.id %}" method="get" style="display: inline;">
                                 <button type="submit" class="edit-button">ערוך</button>
