--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -238,6 +238,11 @@
     border-radius: 4px;
     resize: none;
     vertical-align: top;
+
+}
+  .author-name {
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(89, 89, 89, 0.58);
 }
     </style>
 
@@ -280,7 +285,7 @@
                 <div class="post">
                     <a href="{% url 'post_detail' post2.id %}" style="text-decoration: none; color: inherit;">
                         <div class="post-info">
-                            <span class="post-author">פורסם על ידי: {{ post2.user_name }}</span>
+                          <span class="post-author"> פורסם על ידי : <span class="author-name">{{ post2.user_name }}</span><br></span>
 
                         </div>
                         <div class="post-details">
@@ -295,7 +300,7 @@
     <span class="like-count">💙 {{post2.likes_count }}</span>
 </div>
 
-    {% if post2.user_name == current_user or user.is_superuser %}
+{% if post2.user_name == current_user or user_type == 'admin' %}
     <div class="post-actions">
         <form action="{% url 'edit_post' post2.id %}" method="get" style="display: inline;">
             <button type="submit" class="edit-button">ערוך</button>
