--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -18,37 +18,44 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-
             font-family: Arial, sans-serif;
-
         }
 
         form {
-           background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
-            padding: 30px;
-            border-radius: 8px;
+            padding: 80px;
+            border-radius: 6px;
             box-shadow: 0px 0px 10px 0px rgba(0,0,0,10);
-            overflow: auto;
-            width: 60%;
-            max-width: 800px;
+            width: 100%;
+            max-width: 900px;
         }
 
         label {
-            font-size: 30px; /* Increase label font size */
+            font-size: 25px; /* Increase label font size */
         }
+   .comment {
+       background-color: rgba(162, 153, 145, 0.08);
+       box-shadow: 0 2px 4px rgba(8, 114, 108, 0.88);
+        border-radius: 5px;
 
-        input[type="text"], textarea {
-            width: 100%;
-            padding: 15px;
-            margin-bottom: 15px;
-            border-radius: 4px;
-            border: 1px solid #0e0e0e;
-            resize: none;
-            height: 100px;
-            font-size: 25px; /* Increase input and textarea font size */
-             background-color: #e7e3e3;
-        }
+        margin-bottom: 30px; /* adjust as needed */
+        word-wrap: break-word;
+           margin-top: 20px; /* Adjust this value as needed */
 
+    }
+    input[type="text"], textarea {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        border: 2px solid #7a7272;
+        background: rgba(224, 223, 223, 0.35);
+        border-radius: 4px;
+        resize: none; /* Add this line */
+    }
+textarea#content {
+    width: 100%; /* Adjust the width as needed */
+    height: 200px; /* Adjust the height as needed */
+}
         button {
             background-color: #007BFF;
             color: #fff;
