--- a/templates/Home.html
+++ b/templates/Home.html
@@ -9,15 +9,14 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://static.vecteezy.com/system/resources/thumbnails/026/767/238/original/handsome-college-boy-on-laptop-2d-character-animation-black-male-working-at-computer-flat-cartoon-4k-transparent-alpha-channel-young-man-studying-library-animated-person-on-white-background-video.jpg');
+            background-image: url('https://i.ibb.co/ZSHySM6/handsome-college-boy-on-laptop-2d-character-animation-black-male-working-at-computer-flat-cartoon-4k.jpg');
             background-size: cover;
             background-repeat: no-repeat;
-            background-size: cover;
         }
         .header {
             text-align: center;
             color: #4b4b4b;
-            text-shadow: 1px 1px 1px #000000;
+            text-shadow: 1px 1px 1px #ffffff;
             position: fixed;
             top: 0;
             width: 100%;
@@ -27,13 +26,14 @@
         .nav {
             display: flex;
             justify-content: space-around;
-            background-color: #333;
+            background-color: #3b9bd7;
             color: white;
             padding: 15px 0;
         }
         .nav a {
-            color: white;
+            color: #ecfcf7;
             text-decoration: none;
+            font-weight: bold; /* Add this line */
         }
         .content {
             padding: 50px;
@@ -54,7 +54,7 @@
     </div>
     <div class="nav">
         <a href="/login">Login</a>
-        <a href="/About_us">About Us</a>
+        <a href="/About_us1">About Us</a>
         <a href="/signup">Sign Up</a>
     </div>
     <div class="content">
