--- a/templates/About_us1.html
+++ b/templates/About_us1.html
@@ -22,39 +22,7 @@
             font-weight: bold; /* make the text bold */
             text-align: center; /* center the text */
         }
-        .sidebar {
-            width: 250px;
-            background-color: rgba(51, 51, 51, 0.64);
-            color: white;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: -250px;
-            transition: left 0.3s ease;
-            padding-top: 60px; /* Adjust to accommodate header */
-        }
-        .sidebar a {
-            display: block;
-            color: white;
-            padding: 10px;
-            padding-top: 50px; /* Add this line */
-            text-decoration: none;
-            direction: ltr;
-            font-weight: bold; /* Make the font bolder */
-            font-size: 16px; /* Increase the font size */
-        }
-        .sidebar a:hover {
-            background-color: rgba(85, 85, 85, 0);
-        }
 
-
-        .close-icon {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-            font-size: 20px;
-        }
         .menu-icon {
             cursor: pointer;
             font-size: 24px;
@@ -88,7 +56,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         body {
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(59, 155, 215,0.3)' }});
             background-repeat: no-repeat;
             background-attachment: fixed;
             height: 100%;
@@ -99,7 +67,7 @@
             direction: rtl;
         }
         header {
-        background-color: rgba(126, 126, 126, 0.26);
+        background-color: rgba(59, 155, 215,0.35);
         color: rgb(0, 0, 0);
         display: flex;
         justify-content: center; /* Center items horizontally */
@@ -110,12 +78,8 @@
     </style>
 </head>
 <header>
-    <div class="menu-icon" onclick="toggleSidebar(event)">☰</div>
     <a href="/" style="text-decoration: none; color: inherit;"><h4>S4S Forum page</h4></a>
      <a href="/" style="text-decoration: none; color: inherit;">&nbsp;🏠</a>
-     <div id="notification-container">
-    <span>&#x1F514;</span> <!-- This is a Unicode bell symbol -->
-    <span id="notification-counter"></span>
 </div>
      <a href="{% url '' %}" class="top-left">
             <img src="https://i.imgur.com/YAy1rDP.png" alt="Clickable image" width="250" height="61" class="invert-color">
@@ -143,39 +107,12 @@
         אמייל ליצירת קשר :<br>
         <b>  s4s.sami.forum@gmail.com</b>
     </p>
- <div class="sidebar" id="sidebar">
-                <div class="close-icon" onclick="toggleSidebar(event)">×</div>
-                <a href="/My_Profile/">My Profile</a>
-                <a href="/Settings/">Settings</a>
-                <a href="/About_us/">About us</a>
-                <a href="{% url 'logout' %}">Sign Out</a>
-            </div>
 
     </div>
 </body>
 </html>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-    function toggleSidebar(event) {
-        event.stopPropagation();
-        const sidebar = document.getElementById('sidebar');
-        sidebar.style.left = (sidebar.style.left === "0px") ? "-250px" : "0px";
-    }
 
-    // Close the menu when clicking outside of it
-    document.addEventListener('click', function(event) {
-        const sidebar = document.getElementById('sidebar');
-        if (!sidebar.contains(event.target)) {
-            sidebar.style.left = "-250px";
-        }
-    });
 
-    function updateNotificationCounter() {
-        $.get('/notifications/unseen_count/', function(data) {
-            $('#notification-counter').text(data.unseen_count);
-        });
-    }
-    updateNotificationCounter();
-    setInterval(updateNotificationCounter, 5000);
 </script>
