--- a/templates/Login.html
+++ b/templates/Login.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #b4beac;
+            background-color: rgba(59, 155, 215,0.35);
             height: 100%;
             width: 100%;
             margin: 0;
@@ -26,7 +26,7 @@
             text-align: center;
         }
         header {
-            background-color: rgba(126, 126, 126, 0.26);
+            background-color: rgba(59, 155, 215,0.35);
             color: rgb(0, 0, 0);
             display: flex;
             justify-content: center; /* Center items horizontally */
