--- a/templates/About_us1.html
+++ b/templates/About_us1.html
@@ -104,7 +104,7 @@
     ירין איבגי - yarinev@ac.sce.ac.il<br>
     עומר דניאל - omerda3@ac.sce.ac.il<br>
     ישראל יעקובוב - israeya@ac.sce.ac.il</b><br><br><br>
-        אמייל ליצירת קשר :<br>
+        אימייל ליצירת קשר :<br>
         <b>  s4s.sami.forum@gmail.com</b>
     </p>
 
