--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -306,6 +306,37 @@
             cursor: pointer;
             position: relative;
         }
+        .edit-button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: #107ef3; /* Green */
+            border: none;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            position: relative;
+        }
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: #107ef3; /* Green */
+            border: none;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            position: relative;
+        }
         .post-actions {
         position: relative;
         }
@@ -426,6 +457,9 @@
         <h3>{{ post.title }}</h3>
         <p>{{ post.content }}</p>
     <div class="button-group">
+        {% if post.user_name == current_user or user_type == 'admin' %}
+    <button class="edit-button" onclick="location.href='{% url 'edit_post' post.id %}'">ערוך</button>
+{% endif %}
     <button class="comment-button" id="toggle-comment-form">תגובה</button>
 
     {% if post.user_name == current_user or user_type == 'admin' %}
@@ -463,7 +497,6 @@
                     {% csrf_token %}
                     <button class="delete1">מחק</button>
                 </form>
-                <button class="delete1" onclick="toggleEditForm({{ comment.id }})">ערוך</button>
             </div>
           <form method="POST" id="edit-form-{{ comment.id }}" style="display: none;" action="{% url 'edit_comment' comment.id %}">
     {% csrf_token %}
