--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -302,7 +302,7 @@
     <span class="like-count">💙 {{post2.likes_count }}</span>
 </div>
 
-{% if post2.user_name == current_user or user_type == 'admin' %}
+{% if post2.user_email == email or user_type == 'admin' %}
     <div class="post-actions">
         <form action="{% url 'edit_post' post2.id %}" method="get" style="display: inline;">
             <button type="submit" class="edit-button">ערוך</button>
