--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -298,7 +298,7 @@
                         <h3>{{ post2.title }}</h3>
                         <p>{{ post2.content }}</p>
      <div class="post-interactions" style="position: absolute; bottom: 10px; left: 10px; display: flex; flex-direction: row;">
-    <span class="comment-count">&#9993; {{ post2.comment_count }}</span>
+    <span class="comment-count">📭 {{ post2.comment_count }}</span>
     <span class="like-count">💙 {{post2.likes_count }}</span>
 </div>
 
