--- a/templates/superuser_home.html
+++ b/templates/superuser_home.html
@@ -1,33 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
-     .login-button {
-            display: inline-block;
-            padding: 22px 55px;
-            background-color: #4caf50;
-            color: white;
-            text-decoration: none;
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            border-radius: 4px;
-        }
-        .login-button:hover {
-            background-color: #45a049;
-        }
-
-
-</style>
 <head>
-                <a href="/" class="login-button">חזרה לדף הבית</a>
 
     <meta charset="UTF-8">
     <title>Superuser Home</title>
-</head>
-<body>
-    <h1>Welcome, Superuser!</h1>
-    <p>You are now logged in as a superuser.</p>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #50b3a2;
+            color: white;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #e8491d 3px solid;
+        }
+        header a {
+            color: #ffffff;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+        header li {
+            float: left;
+            display: inline;
+            padding: 0 20px 0 20px;
+        }
+        header #branding {
+            float: left;
+        }
+        header #branding h1 {
+            margin: 0;
+        }
+        header nav {
+            float: right;
+            margin-top: 10px;
+        }
+        header .highlight, header .current a {
+            color: #e8491d;
+            font-weight: bold;
+        }
+        header a:hover {
+            color: #cccccc;
+            font-weight: bold;
+        }
+        .centered-content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 62vh;
+        }
 
-    <a href="{% url 'logout' %}">Sign Out</a>
+    </style>
+</head>
+
+<body>
+
+     <header>
+        <div class="container">
+            <div id="branding">
+                <h1><span class="highlight">Superuser</span> Home</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="{% url 'manage_users' %}">Manage Users</a></li> <!-- New button -->
+                    <li><a href="{% url 'logout' %}">Sign Out</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="container">
+        <h1>Welcome, Superuser!</h1>
+        <p>You are now logged in as a superuser.</p>
+
+    </div>
+<div class="centered-content">
+            <img src="https://i.ibb.co/ZYp3rhx/6b8f2c89-0f2e-4470-bc13-0d910620eac1.jpg"  width="550" height="400" class="invert-color">
+
+</div>
 </body>
 </html>
