--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -249,6 +249,21 @@
     cursor: pointer;
     position: relative;
 }
+           .like-button2 {
+    padding: 10px 20px; /* Match padding of .edit-button */
+    font-size: 16px; /* Match font size of .edit-button */
+    display: inline-block;
+    margin: 5px; /* Match margin of .edit-button */
+    background-color: #107ef3; /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    position: relative;
+}
         .post-details p {
             padding-left: 10px; /* Adjust as needed */
         }
@@ -303,6 +318,11 @@
             cursor: pointer;
             position: relative;
         }
+        .post-date {
+
+    top: -115px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+}
         .edit-button {
             display: inline-block;
             padding: 10px 20px;
@@ -380,10 +400,24 @@
         left: 15px;
         top:110px;
     }
+    .likes-symbol2 {
+        position: relative;
+        right: 710px;
+        top: 113px;
+    }
     .like-button-clicked {
     background-color: #ff0000; /* Change to the color you want */
 }
+    .liked {
+    background-color: red;
+}
     .like-button-clicked:hover {
+    background-color: #8a0606; /* Change to the color you want */
+}
+.like-button2-clicked {
+    background-color: red;
+}
+    .liked:hover {
     background-color: #8a0606; /* Change to the color you want */
 }
     .likes {
@@ -467,34 +501,43 @@
     </form>
 
          <div class="comments">
-    {% for comment in post.comments.all %}
-        <div class="comment">
-            <span class="author"> הוגב ע"י: <span class="author-name">{{ comment.author }}</span><br></span>
-            <br>
-            <div class="text">{{ comment.text }}</div>
-            {% load tz %}
-            <div class = "post-date">
-                <p>{{current_user_email}}Posted on: {{ comment.created_date|timezone:"Asia/Jerusalem"|date:"F j, Y, P"|slice:":-1" }}</p>
-            </div>
-            {% if comment.user_email == email or user_type == 'admin' %}
-                <div style="display: flex;">
-                    <form method="POST" action="{% url 'delete_comment' comment.id %}">
-                        {% csrf_token %}
-                        <button class="delete1">מחק</button>
-                    </form>
-                    <button class="delete1" onclick="toggleEditForm({{ comment.id }})">ערוך</button>
+ {% for comment in post.comments.all %}
+    <div class="comment">
+        <span class="author"> הוגב ע"י: <span class="author-name">{{ comment.author }}</span><br></span>
+        <br>
+        <p class="likes-symbol2">💙 {{ comment.likes_count }}</p>
+        <div class="text">{{ comment.text }}</div>
+        {% load tz %}
+        <div class="post-date">
+            <p>{{current_user_email}}Posted on: {{ comment.created_date|timezone:"Asia/Jerusalem"|date:"F j, Y, P"|slice:":-1" }}</p>
+        </div>
+        {% if comment.user_email == email or user_type == 'admin' %}
+        {% endif %}
+        <div style="display: flex;">
+            <form method="POST" action="{% url 'delete_comment' comment.id %}">
+                {% csrf_token %}
+                <button class="delete1">מחק</button>
+            </form>
+            <button class="delete1" onclick="toggleEditForm({{ comment.id }})">ערוך</button>
+    <button class="like-button2 {% if comment.has_liked_comment %}like-button2-clicked{% endif %}" id="like-button-{{ comment.id }}" onclick="location.href='{% url 'has_liked_comment' comment.id %}'">
+    {% if comment.has_liked_comment %}
+        Unlike &#128078
+    {% else %}
+        Like &#128077
+    {% endif %}
+</button>
+    </div>
+            <form method="POST" id="edit-form-{{ comment.id }}" style="display: none;" action="{% url 'edit_comment' comment.id %}">
+                {% csrf_token %}
+                <div class="textarea-container">
+                    <textarea name="text" class="resize-textbox">{{ comment.text }}</textarea>
                 </div>
-                <form method="POST" id="edit-form-{{ comment.id }}" style="display: none;" action="{% url 'edit_comment' comment.id %}">
-                    {% csrf_token %}
-                    <div class="textarea-container">
-                        <textarea name="text" class="resize-textbox">{{ comment.text }}</textarea>
-                    </div>
-                    <button type="submit" class="delete1">שמור שינויים</button>
-                </form>
-            {% endif %}
+                <button type="submit" class="delete1">שמור שינויים</button>
+            </form>
         </div>
-    {% endfor %}
-        </div>
+    </div>
+{% endfor %}
+</div>
     </div>
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -551,6 +594,9 @@ document.querySelector('.like-button').addEventListener('click', function(event)
 }
 updateNotificationCounter();
 setInterval(updateNotificationCounter, 5000);
+
+
+
     </script>
 
 </body>
